# C1-Code-Crunch-Convos

./: .gitignore  CONTRIBUTING.md  README.md
C1-SPRING-2025/: C1-WEEK-1-.MD  C1-WEEK-O-.MD
C1-SPRING-2025/C1-RESOURCES/: C1-WEEK-1-PROBLEMS.ipynb.ipynb  problem_1_sorted_check.ipynb
SPRING-2025/: README.MD
community/: faqs.md  support.md
curriculum/: README.md  SYLLABUS.md
curriculum/week-01-python-foundations/: README.md  homework.md  quiz.md  resources.md
curriculum/week-01-python-foundations/challenges/: README.md  challenge-01-personalized-banner.md  challenge-02-environment-audit.md
curriculum/week-01-python-foundations/exercises/: README.md  exercise-01-hello-world.py  exercise-02-repl-explorer.py  exercise-03-script-vs-repl.py
curriculum/week-01-python-foundations/lecture-notes/: 01-installing-python-and-running-your-first-program.md  02-terminal-virtual-environments-and-pip.md  03-git-and-github-basics.md
curriculum/week-01-python-foundations/mini-project/: README.md  starter.py
curriculum/week-02-data-types-operators/: README.md  homework.md  quiz.md  resources.md
curriculum/week-03-control-flow/: README.md  homework.md  quiz.md  resources.md
curriculum/week-04-functions-modules/: README.md  homework.md  quiz.md  resources.md
curriculum/week-05-data-structures/: README.md  homework.md  quiz.md  resources.md
curriculum/week-06-file-io-exceptions/: README.md  homework.md  quiz.md  resources.md
curriculum/week-07-object-oriented-programming/: README.md  homework.md  quiz.md  resources.md
curriculum/week-08-apis-json/: README.md  homework.md  quiz.md  resources.md
curriculum/week-09-web-development-flask/: README.md  homework.md  quiz.md  resources.md
curriculum/week-10-databases-sql/: README.md  homework.md  quiz.md  resources.md
curriculum/week-11-testing-debugging/: README.md  homework.md  quiz.md  resources.md
curriculum/week-11-testing-debugging/mini-project/starter/: pyproject.toml
curriculum/week-11-testing-debugging/mini-project/starter/.github/workflows/: ci.yml
curriculum/week-11-testing-debugging/mini-project/starter/stringutils/: __init__.py  core.py
curriculum/week-11-testing-debugging/mini-project/starter/tests/: test_core.py
curriculum/week-12-automation-scripting/: README.md  homework.md  quiz.md  resources.md
curriculum/week-13-data-analysis/: README.md  homework.md  quiz.md  resources.md
curriculum/week-14-intro-ai-ml/: README.md  homework.md  quiz.md  resources.md
curriculum/week-15-capstone/: README.md  resources.md  rubric.md  submission-checklist.md
past-sessions/: README.md
projects/capstone/: README.md
projects/mini-projects/: README.md
resources/: coding-standards.md  git-github-workflow.md
resources/cheatsheets/: git-commands.md  python-syntax.md
resources/setup-guides/: README.md  browser.md
(+208 files in other folders)
